blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/Enrolment__c.object-meta.xml
<CustomObject>
    <description>One delegate's place on one cohort, from first enquiry to confirmed place. It links the delegate (a person), the cohort, the employer paying and, where there is one, the corporate deal.</description>
    <label>Enrolment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrolments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>