blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/fields/Application_date__c.field-meta.xml
<CustomField>
    <fullName>Application_date__c</fullName>
    <description>The day the booking form or application was received.</description>
    <label>Application date</label>
    <type>Date</type>
</CustomField>