blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Counts places taken on each cohort.</description>
    <label>Cohort</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>Enrolments</relationshipLabel>
    <relationshipName>Enrolments</relationshipName>
    <type>Lookup</type>
</CustomField>