blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/fields/Completion_status__c.field-meta.xml
<CustomField>
    <fullName>Completion_status__c</fullName>
    <description>Outcome for the delegate after the cohort starts. Used for completion rates and certificates.</description>
    <label>Completion status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Did not complete</fullName>
            </value>
            <value>
                <fullName>Did not attend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>