blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/fields/Corporate_deal__c.field-meta.xml
<CustomField>
    <fullName>Corporate_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ties delegate places back to the corporate deal that bought them, where there was one.</description>
    <label>Corporate deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Enrolments</relationshipLabel>
    <relationshipName>Enrolments</relationshipName>
    <type>Lookup</type>
</CustomField>