blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/fields/Delegate__c.field-meta.xml
<CustomField>
    <fullName>Delegate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Gives each delegate a single history of everything they have attended.</description>
    <label>Delegate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enrolments</relationshipLabel>
    <relationshipName>Enrolments</relationshipName>
    <type>Lookup</type>
</CustomField>