blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/fields/Funding_source__c.field-meta.xml
<CustomField>
    <fullName>Funding_source__c</fullName>
    <description>Where the money for this place comes from.</description>
    <label>Funding source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company budget</fullName>
            </value>
            <value>
                <fullName>Apprenticeship levy funds</fullName>
            </value>
            <value>
                <fullName>Grant or public funding</fullName>
            </value>
            <value>
                <fullName>Self-funded by delegate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>