blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/fields/Paying_employer__c.field-meta.xml
<CustomField>
    <fullName>Paying_employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows what an employer has booked in total, for repeat-booking follow-up.</description>
    <label>Paying employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrolments</relationshipLabel>
    <relationshipName>Enrolments</relationshipName>
    <type>Lookup</type>
</CustomField>