blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/fields/Payment_status__c.field-meta.xml
<CustomField>
    <fullName>Payment_status__c</fullName>
    <description>Whether this place is paid for or covered by a purchase order. A place is not confirmed until it is set.</description>
    <label>Payment status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not due</fullName>
            </value>
            <value>
                <fullName>Purchase order received</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Refunded</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>