blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/fields/Withdrawal_reason__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_reason__c</fullName>
    <description>Why the place did not go ahead. Required on the withdrawn stage.</description>
    <label>Withdrawal reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined the offer</fullName>
            </value>
            <value>
                <fullName>Dates did not fit</fullName>
            </value>
            <value>
                <fullName>Employer cancelled</fullName>
            </value>
            <value>
                <fullName>Funding fell through</fullName>
            </value>
            <value>
                <fullName>Cohort cancelled</fullName>
            </value>
            <value>
                <fullName>Chose another provider</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>