blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/validationRules/Gate_delegate_enrolment_applied.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_delegate_enrolment_applied</fullName>
    <active>true</active>
    <description>Stage gate: Delegate enrolment, Applied and later stages need Application date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Enquiry", 1, "Applied", 2, "Place offered", 3, "Awaiting payment", 4, "Enrolled", 5, 0) &gt;= 2, ISBLANK(Application_date__c))</errorConditionFormula>
    <errorDisplayField>Application_date__c</errorDisplayField>
    <errorMessage>Fill in Application date before moving to Applied.</errorMessage>
</ValidationRule>