blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/validationRules/Gate_delegate_enrolment_enrolled.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_delegate_enrolment_enrolled</fullName>
    <active>true</active>
    <description>Stage gate: Delegate enrolment, Enrolled and later stages need Price and Payment status.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Enquiry", 1, "Applied", 2, "Place offered", 3, "Awaiting payment", 4, "Enrolled", 5, 0) &gt;= 5, OR(ISBLANK(Price__c), ISBLANK(TEXT(Payment_status__c))))</errorConditionFormula>
    <errorMessage>Fill in Price and Payment status before moving to Enrolled.</errorMessage>
</ValidationRule>