blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/validationRules/Gate_delegate_enrolment_place_offered.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_delegate_enrolment_place_offered</fullName>
    <active>true</active>
    <description>Stage gate: Delegate enrolment, Place offered and later stages need Price and Funding source.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Enquiry", 1, "Applied", 2, "Place offered", 3, "Awaiting payment", 4, "Enrolled", 5, 0) &gt;= 3, OR(ISBLANK(Price__c), ISBLANK(TEXT(Funding_source__c))))</errorConditionFormula>
    <errorMessage>Fill in Price and Funding source before moving to Place offered.</errorMessage>
</ValidationRule>