blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/validationRules/Lost_delegate_enrolment_withdrawn.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_delegate_enrolment_withdrawn</fullName>
    <active>true</active>
    <description>Lost reason: Delegate enrolment, Withdrawn needs Withdrawal reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Withdrawn"), ISBLANK(TEXT(Withdrawal_reason__c)))</errorConditionFormula>
    <errorDisplayField>Withdrawal_reason__c</errorDisplayField>
    <errorMessage>Fill in Withdrawal reason before closing this as Withdrawn.</errorMessage>
</ValidationRule>