blueprints/education-training/salesforce/force-app/main/default/objects/Enrolment__c/listViews/Awaiting_payment.listView-meta.xml
<ListView>
    <fullName>Awaiting_payment</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Application_date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Awaiting payment</value>
    </filters>
    <label>Enrolments awaiting payment</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>